# backend_wedding

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP.md  alembic.ini  create_tables.py  docker-compose.yml  insert_sample_data.py  pyproject.toml  setup.sql
alembic/: env.py
alembic/versions/: 001_seed_loai_su_kien.py  002_create_schema_with_sample_data.py
src/application/: exceptions.py  validators.py
src/application/interactors/: login_user.py  logout_user.py  register_user.py
src/application/interactors/auth/: change_passoword_interactor.py  (+3 more)
src/application/interfaces/: __init__.py  i_email_service.py  i_ho_gia_dinh_repo.py  i_nguoi_repo.py  i_token_service.py  identity_provider.py  password_hasher.py  request_manager.py  session_generator.py  session_repository.py  transaction_manager.py  user_repository.py  uuid_generator.py
src/application/utils/: __init__.py  text_normalize.py
src/domain/: exceptions.py
src/domain/entities/: ho_gia_dinh.py  nguoi.py  session.py  token.py  user.py
src/infrastructure/adapters/: email_service.py  fastapi_request_manager.py  ho_gia_dinh_repo.py  password_hasher.py  session_id_generator.py  session_identity_provider.py  token_service.py
src/infrastructure/database/: base.py  bootstrap.py  database.py  transaction_manager.py
src/main/: app.py  config.py
src/main/ioc/: __init__.py  container.py  main.py
src/presentation/: dependencies.py  exception_handlers.py  exceptions.py
src/presentation/controllers/: auth.py  auth_controller.py
src/presentation/middlewares/: session.py
(+25 files in other folders)
